vlib/v/checker/tests/sumtype_in_unknown_types_err.vv
type Foo = FooA | FooB | FooC

struct FooA {}

struct FooB {}

struct FooC {}

fn main() {
	foo := Foo(FooA{})
	if foo in [FooB, FooC, FooD] {
		panic('not possible')
	} else {
		println('ok')
	}
}
